<resources>
    <string name="app_name">HANGMAN</string>
    <string name="enter_your_name">Enter your name!</string>
    <string name="save">Save</string>
    <string name="hangman">HANGMAN</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="multiplayer">MULTIPLAYER</string>
    <string name="games_log">GAMES LOG</string>
    <string name="textview">TextView</string>
    <string name="hello">Hello!</string>
    <string name="host">HOST</string>
    <string name="join">JOIN</string>
    <string name="games_log_1">Games Log:</string>
    <string name="empty">empty</string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>
    <string name="_3">3</string>
</resources>